# schrodinger_double_slit_simulation

./: .gitignore  CMakeLists.txt  README.md
include/: crank_nicolson_builder.hpp  crank_nicolson_manager.hpp  gaussian_wavefunction_builder.hpp  helper_functions.hpp  interface_matrix_builder.hpp  interface_wavefunction_builder.hpp  interferometer.hpp  schrodinger_equation.hpp  schrodinger_equation_builder.hpp  wavefunction_builder.hpp
src/: crank_nicolson_builder.cpp  crank_nicolson_manager.cpp  gaussian_wavefunction_builder.cpp  interferometer.cpp  main.cpp  schrodinger_equation.cpp  schrodinger_equation_builder.cpp  wavefunction_builder.cpp
